Added filter component on dashbard and minor css fix

--- a/src/app/shared/scrollview/scrollview.component.html
+++ b/src/app/shared/scrollview/scrollview.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="items.length > 0" class="label">{{title}}
+<div class="label">{{title}}
   <button *ngIf="removeEvent.observers.length" (click)="remove()">X</button>
 </div>
 <div class="scrollable">
