--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,14 +1,18 @@
 .search input {
-    width: calc(100% - 45px);
-    font-size: 16px;
-    padding: 10px;
-    padding-left: 35px;
-    border: 1px solid #ddd;
-    background-color: white !important;
+  width: calc(100% - 45px);
+  font-size: 16px;
+  padding: 10px;
+  padding-left: 35px;
+  border: 1px solid #ddd;
+  background-color: white !important;
 }
 
 .search img {
-    margin-left: 10px;
-    padding-top: 10px;
-    position: absolute;
+  margin-left: 10px;
+  padding-top: 10px;
+  position: absolute;
+}
+
+:host ::ng-deep .mat-form-field {
+  margin-right: 10px;
 }
