--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,12 +2,13 @@
   <img src="assets/images/searchicon.png">
   <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="Enter movie name..">
 </form>
+<app-filter [langOpt]="langOpt" [sortOpt]="sortOpt" [groupOpt]="groupOpt" (selection)="applyFilters($event)"></app-filter>
 <div class="filter" *ngIf="searchResults.length > 0">
   <div *ngFor="let search of searchResults; index as i;">
     <app-scrollview (removeEvent)="removeSearchHandler($event)" [title]="search.title" [items]="search.items" cat="movie"></app-scrollview>
   </div>
 </div>
-<div class="filter" *ngFor="let filter of filters">
-  <app-scrollview [title]="filter.title" [opt]="filter.discoverOption" [cat]="filter.category"></app-scrollview>
+<div class="filter" *ngFor="let media of mediaList">
+  <app-scrollview [title]="media.title" [opt]="media.discoverOption" [cat]="media.category"></app-scrollview>
 </div>
-<div #loadMore><span *ngIf="storage.genres.length > filterStart"><img src="/assets/images/loading.gif"></span></div>
+<div #loadMore><span *ngIf="listEnd > listStart"><img src="/assets/images/loading.gif"></span></div>
