--- a/src/app/watchlist/watchlist.component.html
+++ b/src/app/watchlist/watchlist.component.html
@@ -1,3 +1,3 @@
 <div class="filter" *ngFor="let filter of filters; index as i;">
-  <app-scrollview (removeEvent)="removeCatHandler" [items]="filter.items" [title]="filter.title" cat="movie"></app-scrollview>
+  <app-scrollview (removeEvent)="removeCatHandler($event)" [posIndex]="i" [items]="filter.items" [title]="filter.title" cat="movie"></app-scrollview>
 </div>
